--- a/innocy/index.html
+++ b/innocy/index.html
@@ -2,17 +2,17 @@
 <meta charset=utf-8>
 <title>Innocy</title>
 <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1">
-<meta name=description content="Monitoring der Innovationspolitik in Echtzeit Die Innovationspolitik ist ein bedeutendes und anspruchsvolles Themenfeld und rechtfertigt eine intensive und präzise Beobachtung im wirtschaftspolitischen Kontext.
-Zahlreiche Akteure sind an der Ausgestaltung und Begleitung innovationspolitischer Maßnahmen und Prozesse beteiligt.">
+<meta name=description content="Zusammenfassung Bei INNOCY! handelt es sich um einen komplett neuen Ansatz. Sowohl technologisch, organisatorisch als auch von der inhaltlichen Herangehensweise.
+Eine unabhängige Beobachtung und objektive Messung der Wirksamkeit aller innovationspolitischen Maßnahmen und Prozesse ist notwendig, bisher neu und daher einmalig.">
 <meta name=author content="Gangways">
 <meta name=generator content="Hugo 0.89.2">
 <meta name=twitter:title content="Innocy">
-<meta name=twitter:description content="Monitoring der Innovationspolitik in Echtzeit Die Innovationspolitik ist ein bedeutendes und anspruchsvolles Themenfeld und rechtfertigt eine intensive und präzise Beobachtung im wirtschaftspolitischen Kontext.
-Zahlreiche Akteure sind an der Ausgestaltung und Begleitung innovationspolitischer Maßnahmen und Prozesse beteiligt.">
+<meta name=twitter:description content="Zusammenfassung Bei INNOCY! handelt es sich um einen komplett neuen Ansatz. Sowohl technologisch, organisatorisch als auch von der inhaltlichen Herangehensweise.
+Eine unabhängige Beobachtung und objektive Messung der Wirksamkeit aller innovationspolitischen Maßnahmen und Prozesse ist notwendig, bisher neu und daher einmalig.">
 <meta property="og:title" content="Innocy">
 <meta property="og:title" content="Innocy">
-<meta property="og:description" content="Monitoring der Innovationspolitik in Echtzeit Die Innovationspolitik ist ein bedeutendes und anspruchsvolles Themenfeld und rechtfertigt eine intensive und präzise Beobachtung im wirtschaftspolitischen Kontext.
-Zahlreiche Akteure sind an der Ausgestaltung und Begleitung innovationspolitischer Maßnahmen und Prozesse beteiligt.">
+<meta property="og:description" content="Zusammenfassung Bei INNOCY! handelt es sich um einen komplett neuen Ansatz. Sowohl technologisch, organisatorisch als auch von der inhaltlichen Herangehensweise.
+Eine unabhängige Beobachtung und objektive Messung der Wirksamkeit aller innovationspolitischen Maßnahmen und Prozesse ist notwendig, bisher neu und daher einmalig.">
 <meta property="og:type" content="article">
 <meta property="og:url" content="https://gangways.eu/innocy/"><meta property="article:section" content>
 <link rel=stylesheet href=/plugins/bootstrap/css/bootstrap.min.css media=screen>
@@ -52,20 +52,88 @@ Zahlreiche Akteure sind an der Ausgestaltung und Begleitung innovationspolitisch
 <div class=post-thumb>
 </div>
 <div class="post-content post-excerpt">
-<h2 id=monitoring-der-innovationspolitik-in-echtzeit>Monitoring der Innovationspolitik in Echtzeit</h2>
-<p>Die Innovationspolitik ist ein bedeutendes und anspruchsvolles Themenfeld und rechtfertigt eine intensive und präzise Beobachtung im wirtschaftspolitischen Kontext.</p>
-<p>Zahlreiche Akteure sind an der Ausgestaltung und Begleitung innovationspolitischer Maßnahmen und Prozesse beteiligt. Im Bund, in den Ländern und der EU. Täglich erscheinen Beiträge von Presse und Wirtschaftsverbänden mit Kommentaren, Empfehlungen und Impulsen. Aber worauf basieren diese?</p>
-<p>Leicht zugängliche, tagesaktuelle, umfängliche Analysen der innovationspolitischen Maßnahmen und Prozesse im Zusammenhang mit der gesamtwirtschaftlichen Situation, gibt es bislang nicht.</p>
+<h2 id=zusammenfassung>Zusammenfassung</h2>
+<p>Bei INNOCY! handelt es sich um einen komplett neuen Ansatz. Sowohl technologisch, organisatorisch als auch von der inhaltlichen Herangehensweise.</p>
+<p>Eine unabhängige Beobachtung und objektive Messung der Wirksamkeit aller innovationspolitischen Maßnahmen und Prozesse ist notwendig, bisher neu und daher einmalig.</p>
+<h2 id=einleitung>Einleitung</h2>
+<p>Deutschland ist ein Land, dessen Wohlstand auf der Technologieführerschaft in vielen Bereichen der Industrie beruht. Die Ingenieurkunst ist einer der wichtigsten Rohstoffe, über die es verfügt.</p>
+<p>Die Innovationspolitik ist daher ein bedeutendes und anspruchsvolles Themenfeld und rechtfertigt eine intensive und präzise Beobachtung im wirtschaftspolitischen Kontext.</p>
+<p>Innovationsprozesse beginnen bei der Ausbildung von Fachkräften, der Grundlagenforschung an Hochschulen und Forschungseinrichtungen, der industriellen Realisierung von Erkenntnissen in kleinen und großen, jungen und alten Unternehmen und reicht bis zur erfolgreichen Verwertung neuer Technologien und Verfahren im weltweiten Wettbewerb.</p>
+<p>Zahlreiche Akteure sind an der Ausgestaltung und Begleitung innovationspolitischer Maßnahmen und Prozesse beteiligt. Im Bund, in den Ländern und der EU.</p>
+<p>Täglich werden Beiträge zur Innovationspolitik publiziert. In der Presse erscheinen Kommentare und Empfehlungen, Wirtschaftsverbände äußern sich permanent dazu. Jeder fühlt sich berufen, Impulse und Ratschläge zu verteilen.</p>
+<p>Aber worauf beruhen diese?</p>
+<p>Sie basieren nicht auf ganzheitlichen Erkenntnissen sondern auf punktuell adressierten Problemen und Analysen. Die Ergebnisse sind oftmals zu negativ (&ldquo;Wir müssen alles ändern!") von der Politik natürlich zu positiv (&ldquo;Wir sind sehr erfolgreich!").</p>
+<p>Leicht zugängliche, tagesaktuelle, umfängliche Analysen der innovationspolitischen Maßnahmen und Prozesse im Zusammenhang mit der gesamtwirtschaftlichen Situation, gibt es nicht.</p>
 <h2 id=die-mission>Die Mission</h2>
-<p>Es soll eine kontinuierliche und unabhängige Beobachtung und objektive Bewertung von innovationspolitischen Maßnahmen und Prozessen auf Basis moderner Methoden der Data-Science entwickelt werden.</p>
-<p>Die Plattform wird komplett als Open-Source Projekt realisiert. Es soll eine aktive Community aufgebaut werden, zu der jeder qualifizierte Beiträge liefern kann. Die vollkommene Transparenz der Datengenerierung soll durch diesen offenen Ansatz stets gewährleistet sein.</p>
-<p><img src=../images/dashboard-1y.png alt></p>
-<h2 id=die-zielgruppen>Die Zielgruppen</h2>
-<p>Allen an den Entscheidungsprozessen Beteiligten in der Wirtschaft, Gesellschaft, Politik und Verwaltung, sollen in übersichtlicher Form (Dashboards, Reports, Wikis) Informationen und Input für ihre Tätigkeit bereitgestellt werden. Weiterhin sollen Verbände und Interessenvertretende ein Instrument bekommen, welches sie bei der Verfolgung ihrer Projekte und Anliegen optimal unterstützt.</p>
-<p>Sind auch Sie interessiert an diesem Ansatz? Dann erfahren Sie hier mehr und treten Sie mit uns in Kontakt.</p>
+<p><img src=../images/mission.jpg alt=Mission></p>
+<p>Es soll eine kontinuierliche und unabhängige Beobachtung und objektive Bewertung von innovationspolitischen Maßnahmen und Prozessen entwickelt werden.</p>
+<p>Die Grundlage hierfür bilden sowohl frei verfügbare Datenquellen sowie von an den Prozessen beteiligten Akteuren bereitgestellte Informationen. Die vollständige Transparenz der förderpolitischen Maßnahmen ist unbedingt erforderlich, weil hierfür öffentliche Mittel in erheblicher Höhe eingesetzt werden.</p>
+<p>Alle Daten werden automatisch aufbereitet, mit modernen Methoden der Data-Science analysiert und durch Hinzufügen von sachkundigen Bewertungen veredelt.</p>
+<p>Es handelt sich um eine komplett unabhängige und kritische Beobachtung der Innovationspolitik. Es stehen keine Interessen von Verbänden, Parteien, Projektträgern oder Forschungseinrichtungen dahinter.</p>
+<p>Die Wahrung der Unabhängigkeit wird durch öffentliche Transparenz der Datengenerierung gewährleistet und durch eine geeignete Organisationsform kontrolliert.</p>
+<h2 id=die-roadmap>Die Roadmap</h2>
+<p>Zunächst werden Bundesprogramme beobachtet, danach sollen sukzessive Landes- und EU-Programme hinzukommen.</p>
+<p>Die Plattform wird komplett als Open-Source Projekt realisiert. Es soll eine aktive Community aufgebaut werden, zu der jeder qualifizierte Beiträge liefern kann.</p>
+<p>Beitragskategorien sind:</p>
+<ul>
+<li>Analyse-Modelle</li>
+<li>Software-Komponenten</li>
+<li>Daten</li>
+<li>Kommentare</li>
+</ul>
+<p><img src=../images/dashboard-1y.png alt="Beispiele für Dashboards"></p>
+<p><em><strong>Kontinuierliches Monitoring statt isolierter Studien.</strong></em></p>
+<h2 id=wer-sind-die-zielgruppen>Wer sind die Zielgruppen?</h2>
+<p>Allen an den Entscheidungsprozessen Beteiligten in der Wirtschaft, Gesellschaft, Politik und Verwaltung, sollen in übersichtlicher Form (Dashboards, Reports, Wikis) Informationen und Input für ihre Arbeit bereitgestellt werden.</p>
+<p>Weiterhin sollen Verbände und Interessenvertretende ein Instrument bekommen, welches sie bei der Verfolgung ihrer Projekte und Anliegen optimal unterstützen kann.</p>
+<h2 id=wobei-kann-innocy-hilfreich-sein>Wobei kann INNOCY! hilfreich sein?</h2>
+<p>In erster Linie geht es darum, die Effizienz der Nachverfolgbarkeit von Innovationspolitischen Maßnahmen und Prozessen sichtbar und messbar zu machen und zwar objektiv und gesamtheitlich.</p>
+<p><em><strong>Was heißt das genau?</strong></em></p>
+<p>Bisher werden förderpolitische Vorhaben von alle Zuwendungsgebern in Land, Bund und EU unkoordiniert implementiert und jeweils nur in und für sich evaluiert.</p>
+<p>Es erfolgt keine vergleichende Analyse von Programmen und Vorhaben zwischen den unterschiedlichen Zuwendungsgebern.</p>
+<p>Es geht hierbei nicht um das Aufspüren von Mehrfach-Förderungen oder Überschneidungen sondern um den Versuch, zu messen, ob das insgesamt eingesetzt Geld zu volkswirtschaftlich wertvollen Ergebnissen geführt hat.</p>
+<p>Die bisher überwiegend durchgeführten Erhebungen von Seiten der Projektträger und Institute sind nicht objektiv, und werden meistens erst nach Ende eines Programms durchgeführt und haben oft Kriterien mit Befangenheit.</p>
+<p><em><strong>Begründung</strong></em></p>
+<ul>
+<li>
+<p>Ein Zuwendungsempfänger wird bei der Befragung zur Erfolgskontrolle (schon der Begriff ist unglücklich) mit großer Wahrscheinlichkeit nicht erwähnen, dass sein Vorhaben eigentlich ein Misserfolg war, weil er sich dann in der Gefahr sieht, bei der nächsten Antragstellung schlechter dazustehen und nicht mehr berücksichtigt zu werden.</p>
+</li>
+<li>
+<p>Aber auch ein mit der Evaluation beauftragtes Institut, wird niemals erklären, dass ein Förderprogramm seines Auftraggebers nicht erfolgreich war, weil es dann wahrscheinlich keinen Evaluierungsauftrag mehr erhalten wird.</p>
+</li>
+</ul>
+<p>Es ist hier also jeweils ein erheblicher Bias zu erwarten.</p>
+<p><em><strong>Was bedeutet Messbarkeit?</strong></em></p>
+<p>Für eine aussagekräftige Analyse sind also messbare Kriterien erforderlich, damit hohe Qualitätsstandards eingehalten werden können. Messbar bedeutet, das es nicht auf subjektiven Einschätzungen oder Prognosen basiert.</p>
+<p>Ein Beispiel: In den Befragungen werden üblicherweise Umsatzerwartungen von geförderten Unternehmen abgefragt, welche somit als Bewertungskriterium nicht infrage kommen.</p>
+<p><img src=../images/inno-pipe-ot.png alt="Die Akteure in der Innovationspipeline"></p>
+<p><em><strong>Fazit</strong></em></p>
+<p>Es würde sich also ein viel präziseres Bild ergeben, wenn ausschließlich mit der Verknüpfung und Analyse von eindeutig messbaren Informationen im Kontext der Förderpolitik gearbeitet wird.</p>
+<h2 id=die-organisation>Die Organisation</h2>
+<p>Es soll von Beginn an ein offenes und transparentes Ökosystem entwickelt werden. Die Mitarbeit an der Plattform soll für alle Interessierte möglich sein.
+Vorbild hierfür sind die im Open-Source-Software Bereich etablierten Foundations, wie z.B. Linux, Apache, Eclipse und viele mehr.</p>
+<p><img src=../images/atlas-1.png alt="Aufbereitung von Geo-Informationen"></p>
+<p>Kernstück soll die sogenannte meritrokratische Organisation sein. Es bedeutet, dass alle Entscheidungen durch die Mehrheit mitgetragen werden müssen. So stimmen die Mitglieder des Community alle gemeinsam über die Aufnahme eines neuen Mitglieds, Übertragung einer verantwortungsvolleren Rolle an ein Mitglied oder auch Vertretung der Projekte im &ldquo;Board of Directors&rdquo; ab. Dabei stehen lediglich die individuelle Leistung und Kompetenz des jeweiligen Mitglieds und sein Beitrag zum jeweiligen Projekt bzw. zur Community im Vordergrund. Die Mitglieder sind immer natürliche Personen. Die Zugehörigkeit zu einer bestimmten Organisation spielt dabei keine Rolle.</p>
+<p>Als Rechtsform kann ein Verein oder eine Stiftung gegründet werden.</p>
+<h2 id=finanzierung>Finanzierung</h2>
+<p>Das Vorhaben soll ausschließlich durch öffentliche Zuwendungen, Beiträge und Spenden finanziert werden. Die Unabhängigkeit darf durch die Finanzierung nicht beeinträchtigt werden.</p>
+<p>Alle Ergebnisse sind Open-Data und Open-Source.</p>
+<p><img src=../images/atlas-2.png alt="Der interaktive Innovations-Atlas"></p>
+<h2 id=was-innocy-nicht-sein-soll>Was INNOCY! nicht sein soll</h2>
+<p>INNOCY! ist keine Suchmaschine oder ein Recherchetool. Alle Informationen werden entweder maschinell oder redaktionell aufbereitet und publiziert. Daher kann sehr schnell und gezielt auf die gewünschten Inhalten zugegriffen werden. Die Benutzenden können jedoch auch ein eigenes Profil verwalten, mit welchem sich die Vielzahl der Informationen auf den eigenen Interessenbereich eingrenzen lässt.</p>
+<p>Manche ähnliche Ansätze für Analyse-Tools von großen Akteuren im &ldquo;Fördergeschäft&rdquo;, haben jedoch die Entwicklung und Optimierung von Förderinstrumenten, also ihrem Geschäftsmodell, zum Ziel.</p>
+<p><em><strong>Der Workflow ist also: beobachten, analysieren, kommentieren, publizieren</strong></em></p>
+<h2 id=der-initiator>Der Initiator</h2>
+<p>Roland Kopetsch ist 1962 in Berlin geboren, aufgewachsen, ausgebildet und noch immer wohnhaft.</p>
+<p>Als Diplom-Ingenieur für Luft- und Raumfahrttechnik beschäftigt er sich seit fast vier Jahrzehnten mit Innovationsprozessen im technologischen Kontext.</p>
+<p>![roland kopetsch]<img src=../images/BKo-21-1080x720.JPG alt></p>
+<p>Durch seine aktive Mitarbeit als Entwicklungsingenieur in zahlreichen Forschungs- und Entwicklungsprojekten, sind ihm die Perspektiven eines Forschenden vertraut.</p>
+<p>Gleichzeitgig arbeitet er seit 1991 für mehrere Projektträger des Bundes und der Länder und unterstützt diese mit seinem Unternehmen bei der Digitalisierung ihrer Geschäftsprozesse.</p>
+<p>Die innovationspolitischen Prozesse kennt er also &ldquo;von zwei Seiten&rdquo; und verfügt über ein fundiertes Wissen über die Zusammenhänge in der Innovationspipeline und ein großes Netzwerk innerhalb der wichtigen Akteure.</p>
+<p>Als geschäftsführender Gesellschafter in einem Technologie-Unternehmen, stehen ihm auch die Ressourcen und Kompetenzen zur Verfügung, ein so anspruchsvolles Vorhaben erfolgreich zu realisieren.</p>
 <div class=row>
 <div class=partnersbutton style=margin-left:15px;margin-top:20px>
-<a href=https://github.com/kopetsch/innocy-public target=_blank><button class="btn btn-main animated fadeInUp" id=partnersbutton type=submit>Weitere Informationen</button></a>
+<a href=../#contact><button class="btn btn-main animated fadeInUp" id=partnersbutton type=submit>Kontakt aufnehmen</button></a>
 </div>
 </div>
 </div>
